# robot_ws

./: AGENTS.md
data/waypoints/new_map/: test_route.json
maps/: bunker_map.yaml  map1.pgm  map1.yaml
src/: sysrun.sh
src/DrvPackage/yzz_bunker_mini_base/: CMakeLists.txt  package.xml
src/DrvPackage/yzz_bunker_mini_base/include/bunker_base/: bunker_messenger.hpp
src/DrvPackage/yzz_bunker_mini_base/ugv_sdk/include/ugv_sdk/details/robot_base/: bunker_base.hpp
src/DrvPackage/yzz_bunker_mini_base/yzz_bunker_mini_base/: CMakeLists.txt
src/DrvPackage/yzz_bunker_mini_base/yzz_bunker_mini_base/launch/: bunker_base.launch.py
src/DrvPackage/yzz_gps/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/DrvPackage/yzz_gps/config/: gps.yaml
src/DrvPackage/yzz_gps/launch/: gps_driver.launch.py
src/DrvPackage/yzz_gps/msg/: Gps.msg
src/DrvPackage/yzz_gps/scripts/: gps_driver
src/DrvPackage/yzz_gps/src/yzz_gps_driver/: driver.py
src/DrvPackage/yzz_imu/: package.xml  setup.cfg  setup.py
src/DrvPackage/yzz_imu/launch/: gps_imu.launch.py
src/DrvPackage/yzz_imu/src/yzz_imu_driver/: driver.py
src/DrvPackage/yzz_lidar/: CMakeLists.txt  package.xml
src/FuncPackage/yzz_battery_adapter/: package.xml  setup.cfg  setup.py
src/FuncPackage/yzz_battery_adapter/config/: battery_adapter.yaml
src/FuncPackage/yzz_battery_adapter/launch/: battery_adapter.launch.py
src/FuncPackage/yzz_battery_adapter/resource/: yzz_battery_adapter
src/FuncPackage/yzz_battery_adapter/src/yzz_battery_adapter/: adapter.py
src/FuncPackage/yzz_control/: CMakeLists.txt  package.xml
src/FuncPackage/yzz_control/config/: yzz_control.yaml
src/FuncPackage/yzz_control/launch/: yzz_control.launch.py
src/FuncPackage/yzz_control/scripts/: control.py
src/FuncPackage/yzz_detect/: CMakeLists.txt  package.xml
src/FuncPackage/yzz_detect/launch/: yzz_detect.launch.py
src/FuncPackage/yzz_detect/msg/: ImageResults.msg  Result.msg
src/FuncPackage/yzz_detect/scripts/: yolo_detect.py
src/FuncPackage/yzz_detect_pest/: CMakeLists.txt  package.xml
src/FuncPackage/yzz_detect_pest/launch/: yzz_detect_pest.launch.py
src/FuncPackage/yzz_detect_pest/scripts/: yolov5_det_trt.py
src/FuncPackage/yzz_detect_pest/scripts/models/: Detect_AFPN.yaml  common.py  yolo.py
src/FuncPackage/yzz_detect_pest/scripts/models/moduels/: AFPNHead.py  __init__.py
src/FuncPackage/yzz_detect_pest/scripts/utils/: general.py  plots.py
src/FuncPackage/yzz_msgs/: CMakeLists.txt  package.xml
src/FuncPackage/yzz_msgs/msg/: Battery.msg  GetHolder.msg  Infrared.msg  Lifts.msg  Servo.msg  SetHolder.msg
src/FuncPackage/yzz_navigation2/: package.xml
src/FuncPackage/yzz_navigation2/config/: ekf.yaml
src/FuncPackage/yzz_navigation2/launch/: nav2_localization.launch.py  navigation.launch.py
src/FuncPackage/yzz_navigation2/maps/: new_map.pgm  new_map.yaml
src/FuncPackage/yzz_ptz_camera/: package.xml  setup.cfg  setup.py
src/FuncPackage/yzz_ptz_camera/config/: params.yaml
src/FuncPackage/yzz_ptz_camera/launch/: ptz_control.launch.py
src/FuncPackage/yzz_ptz_camera/src/yzz_ptz_camera_driver/: driver.py
src/FuncPackage/yzz_transfer/: CMakeLists.txt  package.xml
src/FuncPackage/yzz_transfer/config/: yzz_transfer.yaml
src/FuncPackage/yzz_transfer/launch/: env_data.launch.py  heartbeat.launch.py  http_transmitter.launch.py  map_forwarder.launch.py  result.launch.py  yzz_transfer.launch.py
src/FuncPackage/yzz_transfer/msg/: CombinedMapData.msg
src/FuncPackage/yzz_transfer/scripts/: env_data.py  heartbeat.py  http_transmitter.py  map.py  result.py
src/FuncPackage/yzz_waypoint_nav/: README.md  package.xml  setup.cfg  setup.py
src/FuncPackage/yzz_waypoint_nav/config/: yzz_waypoint_nav.yaml
src/FuncPackage/yzz_waypoint_nav/launch/: yzz_waypoint_nav.launch.py
src/FuncPackage/yzz_waypoint_nav/resource/: yzz_waypoint_nav
src/FuncPackage/yzz_waypoint_nav/yzz_waypoint_nav/: __init__.py  waypoint_nav_node.py
src/FuncPackage/yzz_web_mapping/: README.md  package.xml  setup.cfg  setup.py
src/FuncPackage/yzz_web_mapping/launch/: web_mapping.launch.py
src/FuncPackage/yzz_web_mapping/web/: app.js  index.html  login.html  login.js  style.css
src/FuncPackage/yzz_web_mapping/yzz_web_mapping/: __init__.py  configure_auth.py  web_mapping_node.py
src/FuncPackage/yzz_webrtc_streamer/: README.md  package.xml  setup.cfg  setup.py
src/bunker_mini_bringup/: README.md  package.xml  setup.cfg  setup.py
src/bunker_mini_bringup/bunker_mini_bringup/: scan_sanitizer.py
src/bunker_mini_bringup/config/: ydlidar_4ros.yaml  ydlidar_4ros.yaml.bak
src/bunker_mini_bringup/launch/: lidar.launch.py  localization.launch.py  mapping.launch.py  mapping_system.launch.py  nav2_localization.launch.py  nav2_navigation.launch.py  navigation.launch.py  robot_bringup.launch.py
src/bunker_mini_description/: CMakeLists.txt  package.xml
src/bunker_mini_description/launch/: display.launch.py
src/bunker_mini_description/rviz/: bunker_mini.rviz
src/bunker_mini_description/urdf/: bunker_mini.urdf.xacro
src/wit_ros2_imu/: package.xml  setup.cfg  setup.py
src/wit_ros2_imu/launch/: rviz_and_imu.launch.py
src/ydlidar_ros2_driver-master/launch/: 4ros_ydlidar_launch.py  ydlidar_4ros_view_launch.py  ydlidar_raw_launch.py
src/ydlidar_ros2_driver-master/src/: ydlidar_ros2_driver_node.cpp
src/yzz_bunker_mini_base/yzz_bunker_mini_base/: package.xml
src/yzz_decription/: CMakeLists.txt  package.xml
src/yzz_decription/launch/: display.launch.py
src/yzz_decription/urdf/: bunker_mini.urdf.xacro
src/yzz_imu/: setup.py
src/yzz_imu/launch/: rviz_and_imu.launch.py
src/yzz_lidar/launch/: 4ros_ydlidar_launch.py  lidar.launch.py  test_gmapping_launch.py  ydlidar_launch.py
src/yzz_navigation2/: setup.cfg  setup.py
src/yzz_navigation2/config/: slam_toolbox.yaml  slam_toolbox.yaml.bak
src/yzz_robotlaunch/: README.md  package.xml  setup.cfg  setup.py
src/yzz_robotlaunch/launch/: mapping_system.launch.py  navigation_system.launch.py  robot_bringup.launch.py
src/yzz_robotlaunch/yzz_robotlaunch/: navigation_gate.py
(+31 files in other folders)
