<?xml version="1.0"?>
<package format="3">
  <name>bunker_mini_description</name>
  <version>0.0.1</version>

  <description>
    URDF and mesh description package for BUNKER MINI 2.0.
  </description>

  <maintainer email="1151098330@qq.com">
    jiajie
  </maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>