<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yzz_robotlaunch</name>
  <version>0.0.0</version>
  <description>Top-level launch orchestration for the YZZ robot.</description>
  <maintainer email="1151098330@qq.com">orin</maintainer>
  <license>MIT</license>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>robot_localization</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>yzz_decription</exec_depend>
  <exec_depend>yzz_bunker_mini_base</exec_depend>
  <exec_depend>yzz_imu</exec_depend>
  <exec_depend>yzz_lidar</exec_depend>
  <exec_depend>yzz_navigation2</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
