<?xml version="1.0"?>
<package format="3">
  <name>yzz_control</name>
  <version>0.1.0</version>
  <description>ROS2 WebSocket control bridge for the YZZ robot.</description>
  <maintainer email="orin@example.com">orin</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>yzz_gps</exec_depend>
  <exec_depend>yzz_msgs</exec_depend>
  <exec_depend>yzz_transfer</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export><build_type>ament_cmake</build_type></export>
</package>
