<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yzz_ptz_camera</name>
  <version>0.3.7</version>
  <description>ROS 2 V4L2 PTZ camera driver migrated from the YZZ ROS 1 robot.</description>

  <maintainer email="orin@example.com">orin</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>yzz_msgs</depend>

  <exec_depend>v4l-utils</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
