<?xml version="1.0"?>
<package format="3">
  <name>yzz_waypoint_nav</name>
  <version>0.1.0</version>
  <description>Map-associated multi-waypoint patrol navigation for YZZ robots.</description>
  <maintainer email="orin@example.com">orin</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>nav2_msgs</depend>
  <depend>action_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <export><build_type>ament_python</build_type></export>
</package>
