<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yzz_web_mapping</name>
  <version>0.1.0</version>
  <description>Local browser console for YZZ mapping and Nav2 navigation.</description>
  <maintainer email="orin@example.com">orin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>ament_index_python</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>yzz_waypoint_nav</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
